--- a/api/package.json
+++ b/api/package.json
@@ -18,7 +18,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.3"
+    "nodemon": "^3.1.4",
+    "validator": "^13.12.0",
+    "winston": "^3.13.1"
   },
   "devDependencies": {
     "prisma": "^5.15.1"
