--- a/admin/package.json
+++ b/admin/package.json
@@ -17,6 +17,7 @@
         "primeicons": "^6.0.1",
         "primevue": "^4.0.0",
         "vue": "^3.4.34",
+        "vue-currency-input": "^3.1.0",
         "vue-router": "^4.4.0"
     },
     "devDependencies": {
